--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </section>
         <section class="section--page">
             <h2>💡 ᕁ Skills</h2>
-            <ul id="qualifications--list">
+            <ul id="skills--list">
                 <li id="codingExperience">N/A Years | Coding experience.</li>
                 <li id="techExperience">N/A Years | Tech experience.</li>
             </ul>
@@ -91,7 +91,7 @@
             <h2>💼 ᕁ Projects</h2>
             <div class="line-break"></div>
             <div class="card--work-history">
-                <strong>Service Bot [Currently Working on]</strong>
+                <strong>Service Bot [Currently Working on | 2024]</strong>
                 <p>A Public Discord Bot with a lot of features, it runs on the Newest Discord Version</p>
                 <!---
                 <button class="button" onclick='window.open("https://devprofiles.is-an.app","_blank")'> 
