--- a/index.html
+++ b/index.html
@@ -5,8 +5,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style.css"/>
-
     <title>Vensin | Vxnsin</title>
+    <meta property="og:title" content="Vxnsin's About Me">
+    <meta property="og:description" content="About Me von Vxnsin">
+    <meta property="og:url" content="https://vxnsin.github.io/">
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="Vensin | Vxnsin">
+    <meta property="og:locale" content="en_US">
 </head>
 <body> 
     <div id="container--main">
