--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
         <section class="section--page">
             <h2>💡 ᕁ Skills</h2>
             <ul id="skills--list">
-                <li id="codingExperience">N/A Years | Coding experience.</li>
-                <li id="techExperience">N/A Years | Tech experience.</li>
+                <li id="codingExperience">N/A Years ᕁ Coding experience.</li>
+                <li id="techExperience">N/A Years ᕁ Tech experience.</li>
             </ul>
             <script>
                 function updateExperience() {
@@ -71,8 +71,8 @@
                         var techExperienceValue = data.techExperience;
                         
                         // Die Werte in das HTML einfügen
-                        document.getElementById("codingExperience").innerText = codingExperienceValue + " Years | Coding experience.";
-                        document.getElementById("techExperience").innerText = techExperienceValue + " Years | Tech experience.";
+                        document.getElementById("codingExperience").innerText = codingExperienceValue + " Years ᕁ Coding experience.";
+                        document.getElementById("techExperience").innerText = techExperienceValue + " Years ᕁ Tech experience.";
                     })
                     .catch(error => console.error('Error:', error));
                 }
@@ -95,7 +95,7 @@
             <h2>💼 ᕁ Projects</h2>
             <div class="line-break"></div>
             <div class="card--work-history">
-                <strong>Service Bot [Currently Working on | 2024]</strong>
+                <strong>Service Bot [Currently Working on ᕁ 2024]</strong>
                 <p>A Public Discord Bot with a lot of features, it runs on the Newest Discord Version</p>
                 <!---
                 <button class="button" onclick='window.open("https://devprofiles.is-an.app","_blank")'> 
@@ -109,17 +109,17 @@
             </div>
             <div class="line-break"></div>
             <div class="card--work-history">
-                <strong>Velane [Aborted | 2024]</strong>
+                <strong>Velane [Aborted ᕁ 2024]</strong>
                 <p>Velane was supposed to be a Minecraft network using the new elements of the Version <bold>1.20</bold> like a Resourcepack or new Minigames, but the project was canceled due to lack of motivation.</p>
             </div>
             <div class="line-break"></div>
             <div class="card--work-history">
-                <strong>GameCity [Aborted | 2023]</strong>
+                <strong>GameCity [Aborted ᕁ 2023]</strong>
                 <p>Gamecity was an SCP Secret Laboratory Server, it was canceled due to the Server Costs and the too small number of players.</p>
             </div>
             <div class="line-break"></div>
             <div class="card--work-history">
-                <strong>GamesCloud [Aborted | 2022]</strong>
+                <strong>GamesCloud [Aborted ᕁ 2022]</strong>
                 <p>GamesCloud was a Minecraft Network, it was canceled due to the too small number of players and to the lack of motivation.</p>
             </div>
         </section>
