some designe changes

--- a/index.html
+++ b/index.html
@@ -98,20 +98,29 @@
                 <div class="card--work-history">
                     <strong>Service Bot [Currently Working on ᕁ 2024]</strong>
                     <p>A Public Discord Bot with a lot of features, it runs on the Newest Discord Version</p>
-                    <!---
-                    <button class="button" onclick='window.open("https://devprofiles.is-an.app","_blank")'> 
-                        Visit <img src="assets/newtab.svg" />
-                    </button>
-                    <button class="button" onclick='window.open("https://github.com/oyepriyansh/DevProfiles","_blank")'>
-                        Source Code
+                    <!-- <button class="button" onclick='window.open("https://example.com","_blank")'> 
+                        Website 
                         <img src="assets/newtab.svg" />
                     </button>
-                    --->
+                    <button class="button" onclick='window.open("https://example.com","_blank")'> 
+                        
+                        <img src="assets/newtab.svg" />
+                    </button>
+                    -->
                 </div>
                 <div class="line-break"></div>
                 <div class="card--work-history">
-                    <strong>Velane [Aborted ᕁ 2024]</strong>
+                    <strong>Velane [Aborted ᕁ 2024]</strong>                         
                     <p>Velane was supposed to be a Minecraft network using the new elements of the Version <bold>1.20</bold> like a Resourcepack or new Minigames, but the project was canceled due to lack of motivation.</p>
+                    <button class="button" onclick='window.open("https://twitter.com/VelaneMC","_blank")'> 
+                        Twitter
+                        <img src="assets/newtab.svg" />
+                    </button>
+                    <button class="button" onclick='window.open("https://github.com/VelaneNetwork","_blank")'> 
+                        Github 
+                        <img src="assets/newtab.svg" />
+                    </button>
+                    
                 </div>
                 <div class="line-break"></div>
                 <div class="card--work-history">
