--- a/index.html
+++ b/index.html
@@ -4,24 +4,24 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css"/>
+    <link rel="stylesheet" href="about/style.css"/>
     <title>Vensin | Vxnsin</title>
-    <meta property="og:title" content="Vxnsin's About Me">
-    <meta property="og:image" content="https://cdn.discordapp.com/avatars/531896089096486922/2d926f78aec520712f9dd7de7639b4ce.webp?size=256"/>
+    <meta property="og:title" content="Vensin's About Me">
+    <meta property="og:image" content="https://avatars.githubusercontent.com/u/51481323?v=4"/>
     <meta property="og:url" content="https://vxnsin.github.io/">
     <meta property="og:type" content="website">
     <meta property="og:locale" content="en_US">
 </head>
 <body> 
-    <script src="./script.js"></script>
+    <script src="about/script.js"></script>
     <video autoplay muted loop id="video-background">
-        <source src="./assets/background.webm" type="video/webm">
+        <source src="assets/background.webm" type="video/webm">
     </video>
         <div id="blur-screen" onclick="removeBlur()">
         <div id="blur-text">{ click }</div>
         <div id="blur-text">[ This Page contains Audio ]</div>
     </div>  
-    <audio id="myAudio" src="./stan.mp3"></audio>
+    <audio id="myAudio" src="about/stan.mp3"></audio>
     <div id="container--main">
         <section class="section-info" id="wrapper--hero">
                 <div class="light-strip top"></div>
@@ -47,7 +47,7 @@
                     </div>
                 <div>
                     <div class='username-container'><span id='text'></span><div class='underscore' id='username'>&#95;</div></div>
-                    <script src="./script.js"></script>
+                    <script src="about/script.js"></script>
                     <p id="bio">
                         Hello, I'm Vensin, a German developer.<br> 
                         For me, coding is more than just a skill - it's my destiny.<br><br>
@@ -72,7 +72,7 @@
             </ul>
                 <script>
                     function updateExperience() {
-                        fetch('./data.json')
+                        fetch('about/data.json')
                         .then(response => response.json())
                         .then(data => {
                             var codingExperienceValue = data.codingExperience;
