--- a/links/index.html
+++ b/links/index.html
@@ -22,6 +22,7 @@
             <img src="https://avatars.githubusercontent.com/u/51481323?v=4" alt="Vxnsin Avatar"/>
         </div>
         <h1>@vxnsin</h1>
+        </div>
         <div class="links-container">
 
         </div>
