--- a/secret/nsfw.html
+++ b/secret/nsfw.html
@@ -15,7 +15,7 @@
         video {
             width: 100%;
             height: 100%;
-            object-fit: cover; /* Falls das Video nicht die gleichen Dimensionen wie das Fenster hat */
+            object-fit: cover; 
             position: absolute;
             top: 0;
             left: 0;
@@ -34,7 +34,6 @@
         
         video.addEventListener('loadedmetadata', function() {
             setTimeout(function() {
-            console.log("Nach 3 Sekunden");
             video.muted = false; 
         }, 1); 
         });
