--- a/secret/nsfw.html
+++ b/secret/nsfw.html
@@ -23,20 +23,9 @@
     </style>
 </head>
 <body>
-    <video id="secretVideo" autoplay loop muted>
+    <video id="secretVideo" controls loop>
         <source src="Jebaited Song.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
-
-
-    <script>
-        var video = document.getElementById('secretVideo');
-        
-        video.addEventListener('loadedmetadata', function() {
-            setTimeout(function() {
-            video.muted = false; 
-        }, 3000); 
-        });
-    </script>
 </body>
 </html>
