--- a/index.html
+++ b/index.html
@@ -102,6 +102,13 @@
             <section class="section--page" id="work-history-wrapper">
                 <h2 align="center">Projects</h2>
                     <div class="line-break"></div>
+                    <div class="card--work-history">
+                        <strong>Favelife [Currently Working on 2024]</strong>                         
+                        <p>Favelife is an FiveM Server (more details soon)</p>
+                        <!--Buttons-->
+                        <button class="button" onclick='window.open("/go/favelife.html","_blank")'>Discord<img src="assets/newtab.svg" /></button>
+                        <button class="button" onclick='window.open("fivem://connect/favelife.de","_blank")'>Connect<img src="assets/newtab.svg" /></button>    
+                    </div>
                         <div class="card--work-history">
                             <strong>Service Bot [Currently Working on ᕁ 2024]</strong>
                             <p>A Public Discord Bot with a lot of features, it runs on the Newest Discord Version</p>
