Addet go_config.json + file_loader

--- a/index.html
+++ b/index.html
@@ -6,11 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="about/style.css"/>
     <title>Vensin | Vxnsin</title>
+    
     <meta property="og:title" content="Vensin's About Me">
-    <meta property="og:image" content="https://avatars.githubusercontent.com/u/51481323?v=4"/>
-    <meta property="og:url" content="https://vxnsin.github.io/">
+    <meta property="og:description" content="Developer nothing more">
+    <meta property="og:url" content="https://discord.com/users/531896089096486922">
+    <meta property="og:image" content="https://avatars.githubusercontent.com/u/51481323?v=4">
     <meta property="og:type" content="website">
-    <meta property="og:locale" content="en_US">
+    
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Vensin's About Me">
+    <meta name="twitter:description" content="Developer nothing more">
+    <meta name="twitter:image" content="https://avatars.githubusercontent.com/u/51481323?v=4"> 
 </head>
 <body> 
     <script src="about/script.js"></script>
@@ -107,8 +113,9 @@
                         <p>Favelife is an FiveM Server (more details soon)</p>
                         <!--Buttons-->
                         <button class="button" onclick='window.open("/go/favelife.html","_blank")'>Discord<img src="assets/newtab.svg" /></button>
-                        <button class="button" onclick='window.open("fivem://connect/favelife.de","_blank")'>Connect<img src="assets/newtab.svg" /></button>    
-                    </div>
+                        <button class="button" onclick='window.open("fivem://connect/favelife.de","_blank")'>Connect<img src="assets/newtab.svg" /></button>   
+                    <div class="line-break"></div> 
+                        </div>
                         <div class="card--work-history">
                             <strong>Service Bot [Currently Working on ᕁ 2024]</strong>
                             <p>A Public Discord Bot with a lot of features, it runs on the Newest Discord Version</p>
