--- a/go/namemc.html
+++ b/go/namemc.html
@@ -3,18 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Weiterleitung...</title>
+    <title>Vensin -> Namemc</title>
     <link rel="stylesheet" href="./style.css">
+
+    <meta property="og:title" content="Vensin -> Namemc">
+    <meta property="og:description" content="Developer nothing more">
+    <meta property="og:url" content="https://namemc.com/profile/vensin.2" id="og-url">
+    <meta property="og:image" content="https://avatars.githubusercontent.com/u/51481323?v=4">
+    <meta property="og:type" content="website">
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Vensin -> Namemc">
+    <meta name="twitter:description" content="Developer nothing more">
+    <meta name="twitter:image" content="https://avatars.githubusercontent.com/u/51481323?v=4">
+    <meta name="twitter:url" content="https://namemc.com/profile/vensin.2" id="twitter-url">
+
     <script>
         function redirect() {
             const redirectUrl = "https://namemc.com/profile/vensin.2";
+            document.getElementById("og-url").setAttribute("content", redirectUrl);
+            document.getElementById("twitter-url").setAttribute("content", redirectUrl);
             window.location.href = redirectUrl;
             document.getElementById("message").innerHTML = 'Wenn du nicht automatisch weitergeleitet wirst.';
             document.getElementById("back").style.display = 'none';
             document.getElementById("manualRedirect").style.display = 'inline-block';
-            document.getElementById("manualRedirect").setAttribute("href", redirectUrl)
+            document.getElementById("manualRedirect").setAttribute("href", redirectUrl);
         }
-
         window.onload = redirect;
     </script>
 </head>
