--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="about/style.css"/>
-    <title>Vensin | Vxnsin</title>
+    <title>Vensin's About Me</title>
     
     <meta property="og:title" content="Vensin's About Me">
     <meta property="og:description" content="Developer nothing more">
