fixed some things

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <section class="section--page">
             <h2 align="center">About Me</h2>
                     <p align="center" title="Name" alt="Music">📛 ᕁ Luis</p>
-                    <p align="center" title="Birthday" alt="Birthday">🎂 ᕁ 10 April</p>
+                    <p align="center" title="Birthday" alt="Birthday">🎂 ᕁ 10. April</p>
                     <p align="center" title="Languages" alt="Languages">💬 ᕁ German, English</p>
                     <p align="center" title="Location" alt="Location">🌍 ᕁ Germany, Bavaria</p>
                 </ul>
@@ -115,9 +115,9 @@
                 <div title="Web Development" class="card--techstack"><span>HTML, CSS & JavaScript</span></div>
                 <div title="Programming Languages" class="card--techstack"><span>Java, Python & Lua</span></div>
                 <div title="Repository" class="card--techstack"><span>Git & GitHub</span></div>
-                <div title="Database" class="card--techstack"><span>MySQL & MongoDB</span></div>
+                <div title="Database" class="card--techstack"><span>SQL & MongoDB</span></div>
                 <div title="Operating System" c class="card--techstack"><span>Windows & Debian</span></div> 
-                <div title="Code Editors" class="card--techstack"><span>IntelliJ IDEA , VS Code & Unity</span></div>
+                <div title="Software" class="card--techstack"><span>Unreal & Unity</span></div>
             </div>
         </section>
             <!--Projects-->
@@ -133,7 +133,7 @@
                         </div>
                     <div class="line-break"></div> 
                         <div class="card--work-history">
-                            <strong>Service Bot [Currently Working on ᕁ 2024]</strong>
+                            <strong>Service Bot [Paused ᕁ 2024]</strong>
                             <p>A Public Discord Bot with a lot of features, it runs on the Newest Discord Version</p>
                         </div>
                     <div class="line-break"></div>
