--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
                 <div>
                     <div class='username-container'><span id='text'></span><div class='underscore' id='username'>&#95;</div></div>
                     <p id="bio">
-                        Hello, I'm Vensin, a German developer.<br> 
-                        For me, coding is more than just a skill - it's my destiny.<br><br>
+                        👋 I’m Luis, a German programmer.<br> 
+                        For me, coding is more than just a skill - it's my destiny. ✨<br><br>
                         Feel free to reach out to me on Discord <u><small>(vxnsin)</small></u> if you have any questions or inquiries.
                     </p>
                 </div>
