--- a/go/dcacc.html
+++ b/go/dcacc.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vensin -> Dcacc</title>
+    <title>Vensin -> Discord-Account</title>
     <link rel="stylesheet" href="./style.css">
 
-    <meta property="og:title" content="Vensin -> Dcacc">
+    <meta property="og:title" content="Vensin -> Discord-Account">
     <meta property="og:description" content="Developer nothing more">
     <meta property="og:url" content="https://discord.com/users/531896089096486922" id="og-url">
     <meta property="og:image" content="https://avatars.githubusercontent.com/u/51481323?v=4">
     <meta property="og:type" content="website">
 
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Vensin -> Dcacc">
+    <meta name="twitter:title" content="Vensin -> Discord-Account">
     <meta name="twitter:description" content="Developer nothing more">
     <meta name="twitter:image" content="https://avatars.githubusercontent.com/u/51481323?v=4">
     <meta name="twitter:url" content="https://discord.com/users/531896089096486922" id="twitter-url">
