index.html aktualisieren

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="about/style.css"/>
     <title>Vensin's About Me</title>
     
+    <meta property="author" content="Vensin">
     <meta property="og:title" content="Vensin's About Me">
     <meta property="og:description" content="Developer nothing more">
     <meta property="og:url" content="https://discord.com/users/531896089096486922">
