--- a/go/dcacc.html
+++ b/go/dcacc.html
@@ -6,12 +6,12 @@
     <title>Vensin -> Discord-Account</title>
     <link rel="stylesheet" href="./style.css">
 
+    <meta property="author" content="Vensin">
     <meta property="og:title" content="Vensin -> Discord-Account">
     <meta property="og:description" content="Developer nothing more">
     <meta property="og:url" content="https://discord.com/users/531896089096486922" id="og-url">
     <meta property="og:image" content="https://avatars.githubusercontent.com/u/51481323?v=4">
     <meta property="og:type" content="website">
-
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Vensin -> Discord-Account">
     <meta name="twitter:description" content="Developer nothing more">
