--- a/go/favelifec.html
+++ b/go/favelifec.html
@@ -6,12 +6,12 @@
     <title>Vensin -> Favelife Connect</title>
     <link rel="stylesheet" href="./style.css">
 
+    <meta property="author" content="Vensin">
     <meta property="og:title" content="Vensin -> Favelife Connect">
     <meta property="og:description" content="Developer nothing more">
     <meta property="og:url" content="fivem://connect/favelife.de" id="og-url">
     <meta property="og:image" content="https://avatars.githubusercontent.com/u/51481323?v=4">
     <meta property="og:type" content="website">
-
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Vensin -> Favelife Connect">
     <meta name="twitter:description" content="Developer nothing more">
