--- a/go/namemc.html
+++ b/go/namemc.html
@@ -17,7 +17,7 @@
     <meta name="twitter:description" content="Developer nothing more">
     <meta name="twitter:image" content="https://avatars.githubusercontent.com/u/51481323?v=4">
     <meta name="twitter:url" content="https://namemc.com/profile/vensin.2" id="twitter-url">
-
+    <link rel="canonical" href="https://namemc.com/profile/vensin.2">
     <script>
         function redirect() {
             const redirectUrl = "https://namemc.com/profile/vensin.2";
