--- a/go/tiktok.html
+++ b/go/tiktok.html
@@ -17,7 +17,7 @@
     <meta name="twitter:description" content="Developer nothing more">
     <meta name="twitter:image" content="https://avatars.githubusercontent.com/u/51481323?v=4">
     <meta name="twitter:url" content="https://tiktok.com/@vxnsin" id="twitter-url">
-
+    <link rel="canonical" href="https://tiktok.com/@vxnsin">
     <script>
         function redirect() {
             const redirectUrl = "https://tiktok.com/@vxnsin";
