--- a/links/index.html
+++ b/links/index.html
@@ -12,6 +12,7 @@
     <meta property="og:url" content="https://vxnsin.github.io/linktree">
     <meta property="og:type" content="website">
     <meta property="og:locale" content="en_US">
+    <meta property="author" content="Vensin">
 </head>
 <body>
 
