--- a/go/dcacc.html
+++ b/go/dcacc.html
@@ -17,7 +17,7 @@
     <meta name="twitter:description" content="Developer nothing more">
     <meta name="twitter:image" content="https://avatars.githubusercontent.com/u/51481323?v=4">
     <meta name="twitter:url" content="https://discord.com/users/531896089096486922" id="twitter-url">
-
+    <link rel="canonical" href="https://discord.com/users/531896089096486922">
     <script>
         function redirect() {
             const redirectUrl = "https://discord.com/users/531896089096486922";
