--- a/go/favelife.html
+++ b/go/favelife.html
@@ -17,7 +17,7 @@
     <meta name="twitter:description" content="Developer nothing more">
     <meta name="twitter:image" content="https://avatars.githubusercontent.com/u/51481323?v=4">
     <meta name="twitter:url" content="https://dsc.gg/faveliferp" id="twitter-url">
-
+    <link rel="canonical" href="https://dsc.gg/faveliferp">
     <script>
         function redirect() {
             const redirectUrl = "https://dsc.gg/faveliferp";
