--- a/go/favelifec.html
+++ b/go/favelifec.html
@@ -17,7 +17,7 @@
     <meta name="twitter:description" content="Developer nothing more">
     <meta name="twitter:image" content="https://avatars.githubusercontent.com/u/51481323?v=4">
     <meta name="twitter:url" content="fivem://connect/favelife.de" id="twitter-url">
-
+    <link rel="canonical" href="fivem://connect/favelife.de">
     <script>
         function redirect() {
             const redirectUrl = "fivem://connect/favelife.de";
