--- a/go/kofi.html
+++ b/go/kofi.html
@@ -17,7 +17,7 @@
     <meta name="twitter:description" content="Developer nothing more">
     <meta name="twitter:image" content="https://avatars.githubusercontent.com/u/51481323?v=4">
     <meta name="twitter:url" content="https://ko-fi.com//vxnsin" id="twitter-url">
-
+    <link rel="canonical" href="https://ko-fi.com//vxnsin">
     <script>
         function redirect() {
             const redirectUrl = "https://ko-fi.com//vxnsin";
