--- a/go/labynet.html
+++ b/go/labynet.html
@@ -17,7 +17,7 @@
     <meta name="twitter:description" content="Developer nothing more">
     <meta name="twitter:image" content="https://avatars.githubusercontent.com/u/51481323?v=4">
     <meta name="twitter:url" content="https://laby.net/@vensin" id="twitter-url">
-
+    <link rel="canonical" href="https://laby.net/@vensin">
     <script>
         function redirect() {
             const redirectUrl = "https://laby.net/@vensin";
