--- a/go/roblox.html
+++ b/go/roblox.html
@@ -17,7 +17,7 @@
     <meta name="twitter:description" content="Developer nothing more">
     <meta name="twitter:image" content="https://avatars.githubusercontent.com/u/51481323?v=4">
     <meta name="twitter:url" content="https://roblox.com/users/617261606/profile" id="twitter-url">
-
+    <link rel="canonical" href="https://roblox.com/users/617261606/profile">
     <script>
         function redirect() {
             const redirectUrl = "https://roblox.com/users/617261606/profile";
