--- a/go/steam.html
+++ b/go/steam.html
@@ -17,7 +17,7 @@
     <meta name="twitter:description" content="Developer nothing more">
     <meta name="twitter:image" content="https://avatars.githubusercontent.com/u/51481323?v=4">
     <meta name="twitter:url" content="https://steamcommunity.com/id/Vxnsin" id="twitter-url">
-
+    <link rel="canonical" href="https://steamcommunity.com/id/Vxnsin">
     <script>
         function redirect() {
             const redirectUrl = "https://steamcommunity.com/id/Vxnsin";
