--- a/go/twitch.html
+++ b/go/twitch.html
@@ -17,7 +17,7 @@
     <meta name="twitter:description" content="Developer nothing more">
     <meta name="twitter:image" content="https://avatars.githubusercontent.com/u/51481323?v=4">
     <meta name="twitter:url" content="https://twitch.tv/vxnsin_" id="twitter-url">
-
+    <link rel="canonical" href="https://twitch.tv/vxnsin_">
     <script>
         function redirect() {
             const redirectUrl = "https://twitch.tv/vxnsin_";
