--- a/go/twitter.html
+++ b/go/twitter.html
@@ -17,7 +17,8 @@
     <meta name="twitter:description" content="Developer nothing more">
     <meta name="twitter:image" content="https://avatars.githubusercontent.com/u/51481323?v=4">
     <meta name="twitter:url" content="https://twitter.com/_Vensin" id="twitter-url">
-
+    <link rel="canonical" href="https://twitter.com/_Vensin">
+    <meta name="robots" content="noindex, nofollow">
     <script>
         function redirect() {
             const redirectUrl = "https://twitter.com/_Vensin";
