--- a/links/index.html
+++ b/links/index.html
@@ -13,6 +13,8 @@
     <meta property="og:type" content="website">
     <meta property="og:locale" content="en_US">
     <meta property="author" content="Vensin">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+
 </head>
 <body>
 
@@ -25,7 +27,6 @@
         <h1>@vxnsin</h1>
         </div>
         <div class="links-container">
-
         </div>
     </div>
 
@@ -33,6 +34,6 @@
 
 </body>
     <footer>
-        Made with ❤️ by vxnsin
+        Made with ❤️ by Vensin
     </footer>
 </html>
