--- a/index.html
+++ b/index.html
@@ -38,13 +38,16 @@
         <source src="assets/background.webm" type="video/webm">
     </video>
         <div id="blur-screen" onclick="removeBlur()">
-        <div id="blur-text">{ click }</div>
-        <div id="blur-text">[ This Page contains Audio ]</div>
-        <div id="blur-text" style="margin-top: 1em;">
-        This page is outdated. Check out my new portfolio: 
-        <a href="https://www.vensin.dev/" target="_blank" rel="noopener noreferrer">https://www.vensin.dev/</a>
-  </div>
-    </div>  
+          <div id="blur-text">{ click }</div>
+          <div id="blur-text">[ This Page contains Audio ]</div>
+          <div id="blur-text" style="margin-top: 1em;">
+            This page is outdated. Check out my new portfolio:
+            <br />
+            <a href="https://www.vensin.dev/" target="_blank" rel="noopener noreferrer">
+              https://www.vensin.dev/
+            </a>
+        </div>
+    </div>
     <div class="mute-container" id="muteButton">
         <i class="fas fa-volume-up icon"></i> 
     </div>
