--- a/index.html
+++ b/index.html
@@ -40,9 +40,8 @@
         <div id="blur-screen" onclick="removeBlur()">
           <div id="blur-text">{ click }</div>
           <div id="blur-text">[ This Page contains Audio ]</div>
-          <div id="blur-text" style="margin-top: 1em;">
-            This page is outdated. Check out my new portfolio:
-            <br />
+          <div id="blur-text">This page is outdated.</div>
+          <div id="blur-text">New:
             <a href="https://www.vensin.dev/" target="_blank" rel="noopener noreferrer">
               https://www.vensin.dev/
             </a>
