--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
         <!--Skills-->
         <section class="section--page">
             <h2 align="center">Skills</h2>
-                <p align="center" id="codingExperience">6 ᕁ Coding experience.</p>
-                <p align="center" id="techExperience">6 ᕁ Tech experience.</p>
+                <p align="center" id="codingExperience">7 ᕁ Coding experience.</p>
+                <p align="center" id="techExperience">7 ᕁ Tech experience.</p>
             </ul>
             </section>
         <!--Tech-Stack-->
@@ -137,15 +137,13 @@
                 <h2 align="center">Projects</h2>
                     <div class="line-break"></div>
                     <div class="card--work-history">
-                        <strong>Favelife [Currently Working on 2024]</strong>                         
+                        <strong>Favelife [Aborted ᕁ 2024]</strong>                         
                         <p>Favelife is an FiveM Server (more details soon)</p>
                         <!--Buttons-->
-                        <button class="button" onclick='window.open("/go/favelife.html","_blank")'>Discord<img src="assets/newtab.svg" /></button>
-                        <button class="button" onclick='window.open("fivem://connect/favelife.de","_blank")'>Connect<img src="assets/newtab.svg" /></button>   
                         </div>
                     <div class="line-break"></div> 
                         <div class="card--work-history">
-                            <strong>Service Bot [Paused ᕁ 2024]</strong>
+                            <strong>Service Bot [Aborted ᕁ 2024]</strong>
                             <p>A Public Discord Bot with a lot of features, it runs on the Newest Discord Version</p>
                         </div>
                     <div class="line-break"></div>
